--- a/interfaces/ui_iface/scenarios/env-b.yaml
+++ b/interfaces/ui_iface/scenarios/env-b.yaml
@@ -9,49 +9,33 @@ dynamics:
     metrics: true
     replenishment: true
 fields:
-- bounds:
-  - 0.0
-  - 1.0
+- bounds: [0.0, 1.0]
   coeffs:
-    advection:
-      vx: 0.0
-      vy: 0.0
+    advection: {vx: 0.0, vy: 0.0}
     decay: 0.0
     diffusion: 0.18
     replenish: 0.0
   derived: false
   name: temperature
-- bounds:
-  - 0.0
-  - 1.0
+- bounds: [0.0, 1.0]
   coeffs:
-    advection:
-      vx: 0.0
-      vy: 0.0
+    advection: {vx: 0.0, vy: 0.0}
     decay: 0.0
     diffusion: 0.12
     replenish: 0.0
   derived: false
   name: hydration
-- bounds:
-  - 0.0
-  - 1.0
+- bounds: [0.0, 1.0]
   coeffs:
-    advection:
-      vx: 0.0
-      vy: 0.0
+    advection: {vx: 0.0, vy: 0.0}
     decay: 0.0
     diffusion: 0.05
     replenish: 0.0
   derived: false
   name: vegetation
-- bounds:
-  - 0.0
-  - 1.0
+- bounds: [0.0, 1.0]
   coeffs:
-    advection:
-      vx: 0.0
-      vy: 0.0
+    advection: {vx: 0.0, vy: 0.0}
     decay: 0.0
     diffusion: 0.0
     replenish: 0.0
@@ -81,18 +65,19 @@ vegetation_profile:
   water_half: 0.35
 water_profile:
   elevation_scale: 96
-  lake_fill_threshold: 0.15
   octaves: 4
-  precipitation_scale: 128
   ridge_strength: 0.4
+  precipitation_scale: 128
+  lake_fill_threshold: 0.2
+  river_percentile: 0.88
+  base_moisture: 0.3
+  river_depth: 0.9
+  lake_depth: 1.0
   river_decay_radius: 6
   river_incision: 0.02
-  river_percentile: 0.92
 world:
   height: 256
   ticks_per_day: 1440
   type: grid
   width: 256
-  wrap:
-    x: true
-    y: true
+  wrap: {x: true, y: true}
